<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">
    <Spinner android:id="@+id/locationSpinner"
        android:background="@color/colorAccent"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
    <TextView android:layout_column="0"
        android:layout_row="1"
        android:id="@+id/temperatureTextView"
        android:text="@string/temperature_placeholder"
        android:textSize="50sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>
    <ImageView
        android:id="@+id/imageView"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|center_vertical"
        app:srcCompat="?android:attr/textSelectHandle" />
    <TextView android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:id="@+id/conditionsTextView"
        android:text="@string/conditions_placeholder"
        android:textSize="30sp"
        android:textStyle="italic"
        android:layout_marginStart="20dp"/>
    <TextView android:layout_row="3"
        android:layout_column="0"
        android:text="@string/pollution_level_text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:textSize="30sp"/>
    <TextView android:layout_row="3"
        android:layout_column="1"
        android:text="@string/pollution_value"
        android:id="@+id/pollutionTextView"
        android:textSize="30sp"
        android:layout_marginTop="48dp"/>
    <Button android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:id="@+id/detailsButton"
        android:text="@string/more_details_text"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"/>
    <Button android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:id="@+id/addPollutionButton"
        android:text="@string/add_pollution_value_text"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/viewForecastButton"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:onClick="navigateToForecastList"
        android:text="@string/view_weather_forecast_text" />
</GridLayout>