<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView android:layout_column="0"
        android:layout_row="0"
        android:id="@+id/itemTemperatureTextView"
        android:text="@string/temperature_placeholder"
        android:textSize="50sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>
    <ImageView
        android:id="@+id/itemImageView"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="end|center_vertical"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:contentDescription="@string/conditions_placeholder"/>
    <TextView
        android:id="@+id/itemFeelTextView"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginStart="20dp"/>
    <TextView android:layout_row="3"
        android:layout_column="0"
        android:id="@+id/itemConditionsTextView"
        android:text="@string/conditions_placeholder"
        android:textSize="30sp"
        android:textStyle="italic"
        android:layout_marginStart="20dp"/>
    <TextView android:layout_row="3"
        android:layout_column="1"
        android:id="@+id/itemDateTextView"
        android:text="@string/date_placeholder"
        android:textSize="15sp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="end"/>
</GridLayout>